[package]
name = "planetx_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
rand = "0.9.0"
salvo = { version = "0.77.0", features = ["tower-compat"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
socketioxide = { version = "0.16.1", features = ["tracing"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
